little chances in nav-html, and nav-css is almost done, falta adding a logo to the nav

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es-Ve">
+<html lang="es-VE">
 
 <head>
     <meta charset="UTF-8">
@@ -8,22 +8,29 @@
     <title>Quasar</title>
     <link rel="stylesheet" href="./stylesheet/normalize.css">
     <link rel="stylesheet" href="./stylesheet/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500;700&display=swap" rel="stylesheet">
     <script src="./js/script.js"></script>
+
 </head>
 
 <body>
-    <header class="header">
-        <img src="#" alt="logo de quasar" class="logo">
 
-        <nav class="navigator">
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Habilidades</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
-        </nav>
-        
-    </header>
+
+    <nav class="navigator">
+        <img src="#" alt="logo de quasar" class="logo">
+        <img id="menubtn" class="logo-menu" src="./assets/icons/bars-solid.svg" alt="menu">
+
+        <ul class="nav-list">
+            <li><a href="/">Inicio</a></li>
+            <li><a href="#">Habilidades</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </nav>
 </body>
 
 </html>
