El header sigue igual, pequeñas modificaciones en el nav, se cambio la tipografia del logo y se disminuyo la altura del nav, y se implemento la metodologia bem

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap" rel="stylesheet">
     <script src="./js/script.js"></script>
 
 </head>
@@ -21,57 +19,30 @@
 <body>
 
 
-    <nav class="navigator">
-        <!-- <img src="#" alt="logo de quasar" class="logo"> -->
-        <a class="logo" href="/">Quasar</a>
-        <img id="menubtn" class="logo-menu" src="./assets/icons/bars-solid.svg" alt="menu">
+    <nav class="nav">
 
-        <ul class="nav-list">
-            <li><a href="/">Inicio</a></li>
-            <li><a href="#">Habilidades</a></li>
-            <li><a href="#">Contacto</a></li>
+        <a class="logo" href="/">Quasar</a>
+        <img id="nav__button-menu" class="nav__button-menu" src="./assets/icons/bars-solid.svg" alt="menu">
+
+        <ul class="nav__list">
+            <li class="nav__item"><a class="nav__element" href="/">Inicio</a></li>
+            <li class="nav__item"><a class="nav__element" href="#">Habilidades</a></li>
+            <li class="nav__item"><a class="nav__element" href="#">Contacto</a></li>
         </ul>
     </nav>
 
     <header class="header">
-        <div class="back-image"></div>
-        <div class="about-me">
-            <p class="p-header">
-                Soy <strong>Raul Aponte</strong>. Soy de Venezuela,<br>y soy un <em>desarrollador Web FullStack</em>, <br>con un año de experiencia en la Web.
+        <div class="header__image"></div>
+        <div class="header__about-me">
+            <p class="header__text">
+                Soy <strong class="header__text__my-name">Raul Aponte</strong>. Soy de Venezuela,<br>y soy un <em>desarrollador Web FullStack</em>,
+                <br>con un año de experiencia en la Web.
             </p>
 
-            <a href="#" class="bottom bottom-register">
-                Registrarse
-            </a>
+            <a href="#" class="button">Registrarse</a>
 
         </div>
     </header>
-
-    <main>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi sapiente nemo necessitatibus iste maxime deserunt dolorum iusto aliquam eos illo. Debitis totam atque quidem ducimus saepe, unde facilis eaque! Ullam
-        </p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel ad, temporibus sunt magni ut nisi deleniti fugiat eveniet atque, dignissimos, repellendus veritatis mollitia ducimus dicta incidunt officiis adipisci error quisquam.
-        Tenetur libero, distinctio sed saepe suscipit hic quod eius, inventore quis natus quisquam accusamus ex ullam ipsam, sapiente ipsum dicta assumenda. Ipsa necessitatibus tempora facilis repellendus laborum veritatis reiciendis a.
-        Consectetur quae fuga modi necessitatibus dolore laboriosam quibusdam soluta aut, quis minima nemo iusto, maxime sunt rem vel ipsum doloribus facilis saepe sequi nobis, dolorem quam autem! Provident, error rerum.
-        Ullam velit commodi repellendus asperiores accusantium veritatis, nostrum dolorem voluptatem debitis laboriosam? Tempore officiis sint ratione aspernatur iste voluptate eligendi beatae temporibus, expedita inventore ex rerum quibusdam nisi, sequi voluptas!
-        Laboriosam a, assumenda debitis beatae corporis dolore praesentium officia. Quia incidunt aliquid, facilis laborum saepe iste nobis officia natus distinctio sint id animi, excepturi rem corrupti dolore delectus nulla cum.
-        Aperiam minima amet architecto excepturi illum voluptate harum id explicabo, dolorum praesentium, rerum accusamus perferendis odio laborum cum, debitis beatae. Recusandae magnam officia eum in minus vero incidunt omnis amet!
-        Porro aperiam exercitationem non cupiditate sit reiciendis facilis dignissimos amet doloremque enim ipsam corrupti veritatis nisi fugit sapiente laborum ex, excepturi accusantium nesciunt esse sequi. Nostrum accusamus tempore repudiandae natus!
-        Nesciunt perferendis eligendi obcaecati a ab, nostrum in illo dolore magni minima accusamus itaque assumenda consequuntur odio deserunt temporibus. Error magnam dolor blanditiis nam cum tempora illo labore repellat cumque!
-        Doloremque nostrum accusamus vero sed quo quasi asperiores porro! Veritatis commodi consequuntur animi corporis porro blanditiis natus at cumque deleniti eligendi placeat rerum, facere beatae! Ad repellendus impedit sint expedita.
-        Maxime ut laudantium nemo magnam. Aut quisquam, magnam commodi pariatur temporibus eveniet et provident eum quae quam rem debitis dolorum impedit optio possimus consectetur minus in quod iste ullam asperiores.
-        Iste architecto at vitae dolorem officia sit tenetur nulla exercitationem saepe alias natus vero dolores reiciendis, voluptate veniam id repellat laudantium laborum ipsam necessitatibus autem nesciunt perspiciatis! Excepturi, placeat itaque?
-        Ipsum laboriosam facere voluptatum. Molestias odit vitae dolorum repellat laudantium accusamus expedita rerum id reprehenderit veritatis non, minima tempore veniam nesciunt fuga sint aspernatur. Nemo soluta recusandae cum fugit suscipit.
-        Velit nisi omnis quas saepe aspernatur quasi numquam facere iste? Doloribus est quidem ipsum temporibus exercitationem quaerat laboriosam aspernatur nobis. Earum, minima ex. Esse, provident laborum blanditiis ad rerum incidunt.
-        Enim voluptate dolores hic accusantium, suscipit, quae, consequuntur quod itaque perferendis minus unde! Culpa, quibusdam, tempore quis voluptatibus repellat beatae exercitationem assumenda, quod quidem provident sint voluptate vitae magnam minus.
-        Tempora voluptatum tempore harum animi facere iste sapiente asperiores atque perspiciatis, laudantium, quo alias ad nobis. Possimus sint esse nulla aspernatur, rem eligendi expedita repudiandae minus a vero illum quae?
-        Temporibus, provident. Nostrum porro accusamus atque praesentium. Quod mollitia velit et saepe consequuntur itaque! Quibusdam perspiciatis quas facere architecto neque. Repellendus debitis magni sapiente quis quos eum at eaque autem?
-        Voluptate itaque reprehenderit at aliquid non atque pariatur animi. Ea quibusdam ipsam, explicabo laborum fugiat, ut autem rerum perferendis cum nulla molestias. Odio hic alias est ea beatae nemo ut?
-        Saepe laudantium provident tempora similique nihil, nisi quidem velit, totam dolores enim doloremque cumque iusto! Illo minus dolorem ut, cupiditate, quia assumenda vel in, praesentium non quo incidunt minima explicabo.
-        Nisi culpa vel quam, dolorem officia minima minus voluptatibus suscipit asperiores dolores cupiditate magnam ducimus illo voluptate perspiciatis inventore id ipsa dolor nam sequi illum autem aut commodi laudantium! In.
-        Natus consectetur necessitatibus debitis nam eum esse nulla vel non fuga nihil neque, illo laudantium recusandae officia possimus iste nisi facere, inventore repellendus omnis aperiam saepe adipisci veniam aliquid! Tenetur?</p>
-    </main>
 
 </body>
 
