Position fixed is replaced to sticky

--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
 
 <body>
 
-
     <nav class="nav">
-
         <a class="logo" href="/">Quasar</a>
         <img id="nav__button-menu" class="nav__button-menu" src="./assets/icons/bars-solid.svg" alt="menu">
 
-        <ul class="nav__list">
+        <ul id="nav__list" class="nav__list">
             <li class="nav__item"><a class="nav__element" href="/">Inicio</a></li>
             <li class="nav__item"><a class="nav__element" href="#">Habilidades</a></li>
             <li class="nav__item"><a class="nav__element" href="#">Contacto</a></li>
@@ -32,18 +30,9 @@
     </nav>
 
     <header class="header">
-        <div class="header__image"></div>
-        <div class="header__about-me">
-            <p class="header__text">
-                Soy <strong class="header__text__my-name">Raul Aponte</strong>. Soy de Venezuela,<br>y soy un <em>desarrollador Web FullStack</em>,
-                <br>con un año de experiencia en la Web.
-            </p>
 
-            <a href="#" class="button">Registrarse</a>
-
-        </div>
     </header>
-
+    
 </body>
 
 </html>
