Creacion de Header

--- a/index.html
+++ b/index.html
@@ -34,29 +34,21 @@
     </nav>
 
     <header class="header">
-        <img class="header__img" src="#" alt="Un hombre programando">
+        <img class="header__img" src="./assets/images/Coding-Flatline--orange.svg" alt="laptop with code">
         <div class="header__info">
-            <h2 class="title">Sobre Quasar</h2>
+            <h2 class="header__title">Sobre<br>Quasar</h2>
             <p class="header_txt">
-                Quasar es una empresa dedicada al desarrollo web frontend, creada y dirigida por Raul Aponte, un venezolano de 19 años de edad<br>
+                Quasar es una empresa dedicada al desarrollo web frontend, <br> creada y dirigida por Raul Aponte, un venezolano de 19 años de edad.<br>
                 Quasar busca dar securidad, calidad y buenos precios a aquellos que
                 desean llevar su negocio al mundo web.   
-
             </p>
+            <a class="header__btn-register" href="#">Registarse</a>
         </div>
     </header>
 
     <main>
         <article class="skills">
-            <header>
-                <h2>Habilidades</h2>
-            </header>
-            <ul class="list">
-                <li class="list__stuff">
-                    <img src="" alt="">
-                    <p class="list__stuff__txt">html</p>
-                </li>
-            </ul>
+            
         </article>
     </main>
     
