Corregido error ortografico

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 Quasar busca dar securidad, calidad y buenos precios a aquellos que
                 desean llevar su negocio al mundo web.   
             </p>
-            <a class="header__btn-register" href="#">Registarse</a>
+            <a class="header__btn-register" href="#">Registrarse</a>
         </div>
     </header>
 
