header__info letra mas pequeña, mas espaciado entre los elementos

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <header class="header">
         <img class="header__img" src="./assets/images/Coding-Flatline--orange.svg" alt="laptop with code">
         <div class="header__info">
-            <h2 class="header__title">Sobre<br>Quasar</h2>
+            <h2 class="header__title">Quasar</h2>
             <p class="header_txt">
                 Quasar es una empresa dedicada al desarrollo web frontend, <br> creada y dirigida por Raul Aponte, un venezolano de 19 años de edad.<br>
                 Quasar busca dar securidad, calidad y buenos precios a aquellos que
