Se cambio la imagen a header__img y al background de habilidades, flex-wrap:wrap agreado al header

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
 
     <header class="header">
-        <img class="header__img" src="./assets/images/Coding-Flatline--orange.svg" alt="laptop with code">
+        <img class="header__img" src="/assets/images/DataFlatline.svg" alt="laptop with code">
         <div class="header__info">
             <h2 class="header__title">Quasar</h2>
             <p class="header_txt">
